Closed Bug 522316 Opened 15 years ago Closed 15 years ago

NJ merge: more miscellaneous drift from tamarin

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: graydon, Assigned: graydon)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Nothing substantial in this patch. Just sweeping up the pebbles.
Attachment #406271 - Flags: review?(dvander)
Comment on attachment 406271 [details] [diff] [review]
atomic decay, cosmic rays, ...


>+    #elif defined WIN64
>+        unsigned long tr, fr;
>+        _BitScanForward(&tr, set);
>+        _bittestandreset(&fr, tr);
>+        regs.free = fr;
>+        r = tr;

dead code, r=me with this gone
Attachment #406271 - Flags: review?(dvander) → review+
http://hg.mozilla.org/tracemonkey/rev/373695cc16e8
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/373695cc16e8
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: