Bug 522316 - more miscellaneous drift from tamarin, r=dvander.