js/src/nanojit/Assembler.cpp
@@ -45,6 +45,11 @@
 #include "../core/CodegenLIR.h"
 #endif
 
+#ifdef _MSC_VER
+    // disable some specific warnings which are normally useful, but pervasive in the code-gen macros
+    #pragma warning(disable:4310) // cast truncates constant value
+#endif
+
 namespace nanojit
 {
 #ifdef NJ_VERBOSE
