js/src/nanojit/NativeX64.cpp
@@ -1432,8 +1432,9 @@ namespace nanojit
     // Increment the 32-bit profiling counter at pCtr, without
     // changing any registers.
     verbose_only(
-    void Assembler::asm_inc_m32(uint32_t* pCtr)
+    void Assembler::asm_inc_m32(uint32_t* /*pCtr*/)
     {
+        // todo: implement this
     }
     )
 
